--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ astunparse==1.6.3
 attrs==21.2.0
 backcall==0.2.0
 bleach==4.1.0
+Braindecode==0.5.1
 brainflow==4.8.2
 cached-property==1.5.2
 certifi==2021.10.8
@@ -93,12 +94,13 @@ PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.1
 pyqtgraph==0.12.4
+pyriemann==0.2.7
 pyrsistent==0.18.0
 pyserial==3.5
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python-gitlab==3.2.0
-python-vlc==3.0.11115
+python-vlc==3.0.16120
 pytz==2021.3
 pywin32==302
 pyWinhook==1.6.2
@@ -115,9 +117,11 @@ ruamel.yaml==0.16.3
 ruamel.yaml.clib==0.2.6
 scikit-learn==1.0.1
 scipy==1.7.3
+seaborn==0.11.2
 Send2Trash==1.8.0
 setuptools-scm==6.3.2
 six==1.16.0
+skorch==0.11.0
 smmap==5.0.0
 sounddevice==0.4.4
 SoundFile==0.10.3.post1
@@ -127,6 +131,7 @@ terminado==0.12.1
 testpath==0.5.0
 threadpoolctl==3.0.0
 tomli==1.2.2
+torch==1.10.0
 tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
