--- a/requirements.txt
+++ b/requirements.txt
@@ -115,7 +115,7 @@ requests==2.27.1
 requests-toolbelt==0.9.1
 ruamel.yaml==0.16.3
 ruamel.yaml.clib==0.2.6
-scikit-learn==1.0.1
+scikit-learn~=1.1.1
 scipy==1.7.3
 seaborn==0.11.2
 Send2Trash==1.8.0
